fixing scrollbar on contactlist

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -1,6 +1,6 @@
 #contacts-content .contacts-container {
     width: 456px;
-    max-height: 100vh;
+    height: calc(100vh - 100px);
     display: flex;
     flex-direction: column;
     align-items: center;
